--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=mysql.railway.internal
-DB_USER=root
+DB_HOST=mysql.render.internal
+DB_USER=render
 DB_PASSWORD=IKJsqygYChVcDMfaPtLetWDgUKSIbHjH
-DB_NAME=railway
+DB_NAME=jeec
 DB_PORT=3306
 PORT=3000
